tests/baselines/reference/callNonGenericFunctionWithTypeArguments.errors.txt
==== tests/cases/compiler/callNonGenericFunctionWithTypeArguments.ts (9 errors) ====
    // it is always illegal to provide type arguments to a non-generic function
    // all invocations here are illegal
    
    function f(x: number) { return null; }
    var r = f<string>(1);
            ~~~~~~~~~~~~
!!! callNonGenericFunctionWithTypeArguments.ts(5,9): error TS2087: Could not select overload for 'call' expression.
    
    var f2 = (x: number) => { return null; }
    var r2 = f2<string>(1);
             ~~~~~~~~~~~~~
!!! callNonGenericFunctionWithTypeArguments.ts(8,10): error TS2087: Could not select overload for 'call' expression.
    
    var f3: { (x: number): any; }
    var r3 = f3<string>(1);
             ~~~~~~~~~~~~~
!!! callNonGenericFunctionWithTypeArguments.ts(11,10): error TS2087: Could not select overload for 'call' expression.
    
    class C {
        f(x: number) {
            return null;
        }
    }
    var r4 = (new C()).f<string>(1);
             ~~~~~~~~~~~~~~~~~~~~~~
!!! callNonGenericFunctionWithTypeArguments.ts(18,10): error TS2087: Could not select overload for 'call' expression.
    
    interface I {
        f(x: number): any;
    }
    var i: I;
    var r5 = i.f<string>(1);
             ~~~~~~~~~~~~~~
!!! callNonGenericFunctionWithTypeArguments.ts(24,10): error TS2087: Could not select overload for 'call' expression.
    
    class C2 {
        f(x: number) {
            return null;
        }
    }
    var r6 = (new C2()).f<string>(1);
             ~~~~~~~~~~~~~~~~~~~~~~~
!!! callNonGenericFunctionWithTypeArguments.ts(31,10): error TS2087: Could not select overload for 'call' expression.
    
    interface I2 {
        f(x: number);
    }
    var i2: I2;
    var r7 = i2.f<string>(1);
             ~~~~~~~~~~~~~~~
!!! callNonGenericFunctionWithTypeArguments.ts(37,10): error TS2087: Could not select overload for 'call' expression.
    
    var a;
    var r8 = a<number>();
             ~
!!! callNonGenericFunctionWithTypeArguments.ts(40,10): error TS2158: Untyped function calls may not accept type arguments.
    
    var a2: any;
    var r8 = a2<number>();
             ~~
!!! callNonGenericFunctionWithTypeArguments.ts(43,10): error TS2158: Untyped function calls may not accept type arguments.